[build-system]

build-backend = 'setuptools.build_meta'
requires = [ 'setuptools' ]

[project]

authors = [{ name = 'Alessio G. Baroni' }]
classifiers = [ 'Development Status :: 1 - Planning', 'Environment :: Console', 'Intended Audience :: Developers' ]
description = 'A test'
license = { file = 'LICENSE' }
maintainers = [{ name = 'Alessio G. Baroni' }]
name = 'test'
version = '0.1.0'

[tool.setuptools]

packages = [ 'sources' ]

#[tool.distutils.build_exe]

#excludes = [ 'tkinter', 'unittest' ]

